# KnightmareChess

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Board.hpp  Move.hpp  MoveStruct.hpp  ai.hpp
src/: Board.cpp  Game.cpp  Move.cpp  Piece.cpp  ai.cpp  build.ps1  main.cpp
tools/: .clang-tidy  .clangd  build.ps1  main.cpp
